Styles: Correct tile z-index
Set a z-index for the tile container as it was overlapping the navbar when scrolling rather than going behind it.

--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,10 @@ a:link, a:visited {
   z-index: 1;
 }
 
+.tile-container {
+  z-index: 0;
+}
+
 .container {
   max-width: 1200px;
   margin: auto;
